[gd_scene load_steps=4 format=3 uid="uid://icjdf0pahdyx"]

[ext_resource type="Script" uid="uid://02emnfcogxl7" path="res://scenes/menus/pause_menu.gd" id="1_n87rw"]
[ext_resource type="Texture2D" uid="uid://c40o612s66c43" path="res://images/svart.png" id="2_myx47"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kukqi"]
texture = ExtResource("2_myx47")
modulate_color = Color(1, 1, 1, 0.513726)

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_n87rw")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_kukqi")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 461.0
offset_top = 251.0
offset_right = 716.0
offset_bottom = 401.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RESUME"

[node name="OptionsButton" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "OPTIONS"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "EXIT TO MAIN MENU"

[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
